--- a/deployment.yaml
+++ b/deployment.yaml
@@ -51,7 +51,7 @@ metadata:
     allow.http: "false"
 spec:
   rules:
-  - host: go.rancher.robertotrevisan.com.br
+  - host: go.clustersoft.robertotrevisan.com.br
     http:
       paths:
         - path: /
